--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cached_network_image: ^3.2.3
   path: ^1.8.2
   path_provider: ^2.0.13
+  flutter_staggered_animations: ^1.1.1
 
 
   cupertino_icons: ^1.0.2
