--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.0.13
   flutter_staggered_animations: ^1.1.1
+  animated_text_kit: ^4.2.2
 
 
   cupertino_icons: ^1.0.2
